<resources>
    <string name="app_name">GH Player Tracker</string>
    <string name="prefs_house_rule_vantage">house_rule_vantage</string>
    <string name="characters">Characters</string>
    <string name="character">character</string>
    <string name="abilities">abilities</string>
    <string name="items">items</string>
    <string name="notes">notes</string>
    <string name="perks">perks</string>
    <string name="perks_notes">perks notes</string>
    <string name="retired">Retired</string>
    <string name="stats">stats</string>
    <string name="attack_deck">Attack Deck</string>
    <string name="shuffled">Shuffled</string>
    <string name="remaining">%1$d card(s) remaining</string>
    <string name="OK">OK</string>
    <string name="CANCEL">CANCEL</string>
    <string name="edit">Edit: %1$s</string>
    <string name="note">Note</string>
    <string name="level">Level</string>
    <string name="health">Health</string>
    <string name="gold">Gold</string>
    <string name="xp">Experience</string>
    <string name="coins">Coins</string>
    <string name="bless">Bless</string>
    <string name="curse">Curses</string>
    <string name="minus1">-1</string>
    <string name="max_health">Max. health</string>
    <string name="xp_abbreviated">XP</string>
    <string name="next_turn">Next Turn</string>
    <string name="item_id">(%1$s)</string>
    <string name="item_gold">%1$dg</string>
    <string name="active">Active</string>
    <string name="save">Save</string>
    <string name="start">Start</string>
    <string name="load">Load</string>
    <string name="complete">Complete</string>
    <string name="save_changes">Would you like to save your changes ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="save_exists">A save aleardy exists. Do you want to override it ?</string>
    <string name="loaded">Loaded</string>
    <string name="saved">Saved</string>
    <string name="save_failed">Failed to save</string>
</resources>
