<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/load"
        android:icon="@drawable/ic_action_file_load"
        android:title="@string/load"
        app:showAsAction="always"/>

    <item
        android:id="@+id/save"
        android:icon="@drawable/ic_save_white_24dp"
        android:title="@string/save"
        app:showAsAction="always"/>

    <item
        android:id="@+id/complete"
        android:icon="@drawable/icon_tick_inverse"
        android:title="@string/complete"
        app:showAsAction="always"/>


<!--    <item-->
<!--        android:id="@+id/houseRuleVantage"-->
<!--        android:checkable="true"-->
<!--        android:title="House Rule Advantage/Disadvantage"/>-->
</menu>