<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <requestFocus/>

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:lines="1"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1">

            <LinearLayout
                android:id="@+id/level_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:orientation="horizontal"
                android:foreground="?attr/selectableItemBackground"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/level"
                    android:paddingRight="8dp"
                    android:paddingLeft="8dp"
                    android:textSize="@dimen/characterLabelSize"
                    />


                    <TextView
                        android:id="@+id/level_text"
                        style="@style/TagEditor.EditNumber"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="4dp"
                        android:layout_weight="1"
                        android:clickable="false"
                        android:focusable="false"
                        android:longClickable="false"
                        android:textSize="@dimen/characterTextViewSize"/>

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        app:srcCompat="@drawable/ic_level"
                        android:layout_marginRight="8dp"/>


            </LinearLayout>
        </android.support.v7.widget.CardView>

        <Space
            android:layout_width="6dp"
            android:layout_height="0dp"/>

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1">

            <LinearLayout
                android:id="@+id/level_health_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/max_health"
                        android:paddingRight="8dp"
                        android:paddingLeft="8dp"
                        android:textSize="@dimen/characterLabelSize"
                        />

                    <TextView
                        android:id="@+id/health_text"
                        style="@style/TagEditor.EditNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="4dp"
                        android:clickable="false"
                        android:focusable="false"
                        android:longClickable="false"
                        android:textSize="@dimen/characterTextViewSize"/>

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        app:srcCompat="@drawable/ic_heal"
                        android:layout_marginRight="8dp"/>


            </LinearLayout>
        </android.support.v7.widget.CardView>
        <Space
            android:id="@+id/companion_spacer"
            android:layout_width="6dp"
            android:layout_height="0dp"/>

        <android.support.v7.widget.CardView
            android:id="@+id/companion_card_view"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1">

            <LinearLayout
                android:id="@+id/level_health_companion_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/health_companion_text"
                    style="@style/TagEditor.EditNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:clickable="false"
                    android:focusable="false"
                    android:longClickable="false"
                    android:textSize="@dimen/characterTextViewSize"/>

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    app:srcCompat="@drawable/ic_heal"
                    android:layout_marginRight="8dp"/>


            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <FrameLayout
                    android:id="@+id/xp_minus"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:foreground="?attr/selectableItemBackground">

                    <ImageView
                        android:id="@+id/xp_minus_button"
                        android:layout_width="22dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:layout_gravity="center"
                        android:adjustViewBounds="true"
                        app:srcCompat="@drawable/ic_remove_circle_black_24dp"/>
                </FrameLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/preference_list_divider_material"/>

                <LinearLayout
                    android:id="@+id/xp_container"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp">

                    <Space
                        android:layout_height="0dp"
                        android:layout_width="0dp"
                        android:layout_weight="1"/>

                    <TextView
                        android:id="@+id/xp_text"
                        style="@style/TagEditor.EditNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="4dp"
                        android:clickable="false"
                        android:focusable="false"
                        android:longClickable="false"
                        android:textSize="@dimen/characterTextViewSize"
                        android:layout_gravity="center"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="/"
                        android:layout_gravity="center"
                        />

                    <TextView
                        android:id="@+id/max_xp_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:focusable="false"
                        android:longClickable="false"
                        android:layout_gravity="center"/>

                    <Space
                        android:layout_height="0dp"
                        android:layout_width="0dp"
                        android:layout_weight="1"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        app:srcCompat="@drawable/ic_xp"
                        android:layout_gravity="end|center_vertical"/>
                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/preference_list_divider_material"/>

                <FrameLayout
                    android:id="@+id/xp_plus"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:foreground="?attr/selectableItemBackground">

                    <ImageView
                        android:id="@+id/xp_plus_button"
                        android:layout_width="22dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:adjustViewBounds="true"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/ic_add_circle_black_24dp"/>
                </FrameLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <Space
            android:layout_width="6dp"
            android:layout_height="0dp"/>

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <FrameLayout
                    android:id="@+id/gold_minus"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:foreground="?attr/selectableItemBackground">

                    <ImageView
                        android:id="@+id/gold_minus_button"
                        android:layout_width="22dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:adjustViewBounds="true"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/ic_remove_circle_black_24dp"/>
                </FrameLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/preference_list_divider_material"/>

                <LinearLayout
                    android:id="@+id/gold_container"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp">

                    <Space
                        android:layout_height="0dp"
                        android:layout_width="0dp"
                        android:layout_weight="1"/>
                    <TextView
                        android:id="@+id/gold_text"
                        style="@style/TagEditor.EditNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="4dp"
                        android:clickable="false"
                        android:focusable="false"
                        android:longClickable="false"
                        android:textSize="@dimen/characterTextViewSize"
                        android:layout_gravity="center"/>

                    <Space
                        android:layout_height="0dp"
                        android:layout_width="0dp"
                        android:layout_weight="1"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        app:srcCompat="@drawable/ic_loot"
                        android:layout_gravity="end|center_vertical"/>
                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/preference_list_divider_material"/>

                <FrameLayout
                    android:id="@+id/gold_plus"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:foreground="?attr/selectableItemBackground">

                    <ImageView
                        android:layout_width="22dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:adjustViewBounds="true"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/ic_add_circle_black_24dp"/>
                </FrameLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>


    </LinearLayout>

    <CheckBox
        android:id="@+id/retired"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retired" />
</LinearLayout>